base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-ui
  namespace: develop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-ui
  template:
    metadata:
      labels:
        app: demo-ui
    spec:
      containers:
      - image: diegoruizrei/infra-ui-test:0.0.14
        name: demo-ui
        ports:
        - containerPort: 8080
