base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-ui
  namespace: develop
spec:
  ports:
  - port: 8080
  selector:
    app: demo-ui
