base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testapp-ingress-subdomain
  namespace: develop
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:  
  rules:
  - host: demo-ui.drtest.reisys.io
    http:
      paths:
        - path: /
          backend:
            serviceName: demo-ui
            servicePort: 8080
